change Directory Structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 *~
 *.pyc
 .*.swp
-bin/*
-src/*
-rpm/*
-deb/*
+key/*
 log/*
-tmp/*
 output/*
+target/bin/*
+target/deb/*
+target/key/*
+target/rpm/*
+target/src/*
+tmp/*
 !.gitkeep
