--- a/fh.env
+++ b/fh.env
@@ -4,3 +4,7 @@
 #
 export FHHOME="/home/fasthandle/fhhome"
 export PATH="$PATH:$FHHOME/fhscripts:."
+cd ${FHHOME}
+ 
+# I don't need .pyc files. So I don't make .pyc files.
+export PYTHONDONTWRITEBYTECODE=1
