change directory name from fhscripts to bin

--- a/fh.env
+++ b/fh.env
@@ -3,7 +3,7 @@
 # source /home/fasthandle/fhhome/fh.env  with  ~/.bashrc
 #
 export FHHOME="/home/fasthandle/fhhome"
-export PATH="$PATH:$FHHOME/fhscripts:."
+export PATH="$PATH:$FHHOME/bin:."
 cd ${FHHOME}
  
 # I don't need .pyc files. So I don't make .pyc files.
