create env FHLINUX,FHWIN, FHOTHERS

--- a/fh.env
+++ b/fh.env
@@ -3,8 +3,12 @@
 # source /home/fasthandle/fhhome/fh.env  with  ~/.bashrc
 #
 export FHHOME="/home/fasthandle/fhhome"
-export PATH="$PATH:$FHHOME/bin:."
-cd ${FHHOME}
+export FHLINUX="/home/fasthandle/fhhome/linux"
+export FHWIN="/home/fasthandle/fhhome/win"
+export FHOTHERS="/home/fasthandle/fhhome/others"
+
+export PATH="$PATH:$FHLINUX/bin:."
+cd ${FHLINUX}
  
 # I don't need .pyc files. So I don't make .pyc files.
 export PYTHONDONTWRITEBYTECODE=1
