change directory of the FastHandle Scripts

--- a/fh.env
+++ b/fh.env
@@ -7,7 +7,7 @@ export FHLINUX="/home/fasthandle/fhhome/linux"
 export FHWIN="/home/fasthandle/fhhome/win"
 export FHOTHERS="/home/fasthandle/fhhome/others"
 
-export PATH="$PATH:$FHLINUX/bin:."
+export PATH="$PATH:$FHHOME/fhscripts:."
 cd ${FHLINUX}
  
 # I don't need .pyc files. So I don't make .pyc files.
